; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_initio.c_initio_alloc_scb.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_initio.c_initio_alloc_scb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scsi_ctrl_blk = type { i32, %struct.scsi_ctrl_blk* }
%struct.initio_host = type { i32, i32*, %struct.scsi_ctrl_blk* }

@SCB_RENT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.scsi_ctrl_blk* (%struct.initio_host*)* @initio_alloc_scb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.scsi_ctrl_blk* @initio_alloc_scb(%struct.initio_host* %0) #0 {
  %2 = alloca %struct.initio_host*, align 8
  %3 = alloca %struct.scsi_ctrl_blk*, align 8
  %4 = alloca i64, align 8
  store %struct.initio_host* %0, %struct.initio_host** %2, align 8
  %5 = load %struct.initio_host*, %struct.initio_host** %2, align 8
  %6 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %5, i32 0, i32 0
  %7 = load i64, i64* %4, align 8
  %8 = call i32 @spin_lock_irqsave(i32* %6, i64 %7)
  %9 = load %struct.initio_host*, %struct.initio_host** %2, align 8
  %10 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %9, i32 0, i32 2
  %11 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %10, align 8
  store %struct.scsi_ctrl_blk* %11, %struct.scsi_ctrl_blk** %3, align 8
  %12 = icmp ne %struct.scsi_ctrl_blk* %11, null
  br i1 %12, label %13, label %29

13:                                               ; preds = %1
  %14 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %3, align 8
  %15 = getelementptr inbounds %struct.scsi_ctrl_blk, %struct.scsi_ctrl_blk* %14, i32 0, i32 1
  %16 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %15, align 8
  %17 = load %struct.initio_host*, %struct.initio_host** %2, align 8
  %18 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %17, i32 0, i32 2
  store %struct.scsi_ctrl_blk* %16, %struct.scsi_ctrl_blk** %18, align 8
  %19 = icmp eq %struct.scsi_ctrl_blk* %16, null
  br i1 %19, label %20, label %23

20:                                               ; preds = %13
  %21 = load %struct.initio_host*, %struct.initio_host** %2, align 8
  %22 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %21, i32 0, i32 1
  store i32* null, i32** %22, align 8
  br label %23

23:                                               ; preds = %20, %13
  %24 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %3, align 8
  %25 = getelementptr inbounds %struct.scsi_ctrl_blk, %struct.scsi_ctrl_blk* %24, i32 0, i32 1
  store %struct.scsi_ctrl_blk* null, %struct.scsi_ctrl_blk** %25, align 8
  %26 = load i32, i32* @SCB_RENT, align 4
  %27 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %3, align 8
  %28 = getelementptr inbounds %struct.scsi_ctrl_blk, %struct.scsi_ctrl_blk* %27, i32 0, i32 0
  store i32 %26, i32* %28, align 8
  br label %29

29:                                               ; preds = %23, %1
  %30 = load %struct.initio_host*, %struct.initio_host** %2, align 8
  %31 = getelementptr inbounds %struct.initio_host, %struct.initio_host* %30, i32 0, i32 0
  %32 = load i64, i64* %4, align 8
  %33 = call i32 @spin_unlock_irqrestore(i32* %31, i64 %32)
  %34 = load %struct.scsi_ctrl_blk*, %struct.scsi_ctrl_blk** %3, align 8
  ret %struct.scsi_ctrl_blk* %34
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
